P4/opponent_bots/easy_bot.log
ERROR:root:Error in bot.
Traceback (most recent call last):
  File "opponent_bots/easy_bot.py", line 37, in <module>
    current_line = input()
  File "<string>", line 1
    P 11.799949 11.682641 0 61 5
              ^
SyntaxError: invalid syntax
